--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Deaflingo"
+      content="Using computer vision to learn sign language."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/deaflino_dark.png" />
     <!--
