--- a/public/website/index.html
+++ b/public/website/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign Playground</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <title>Sign Practice</title>
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands@0.4/hands.js"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@800&display=swap"
       rel="stylesheet"
@@ -24,313 +28,218 @@
       src="https://cdn.jsdelivr.net/npm/@mediapipe/holistic@0.1/holistic.js"
       crossorigin="anonymous"
     ></script>
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-wasm/dist/tf-backend-wasm.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
     <style>
-      body {
+      /* Reset and base font */
+      * {
         margin: 0;
         padding: 0;
+        box-sizing: border-box;
         font-family: "JetBrains Mono", monospace;
-        background: #14181b;
-        color: #e0e0e0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
       }
-      .mobile-container {
-        width: 100%;
+      /* Body: dark background with safe area padding for notched devices */
+      body {
+        background-color: #121212;
+        padding: calc(60px + env(safe-area-inset-top, 20px)) 20px 20px;
+        min-height: 100vh;
         max-width: 480px;
-        padding: calc(env(safe-area-inset-top, 20px) + 15px) 24px 0 24px;
-        transform: scale(0.8);
-        transform-origin: center center;
+        margin: 0 auto;
+        color: #e0e0e0;
       }
-      .material {
-        background: #1e1e1e;
-        border-radius: 16px;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-        overflow: hidden;
-        margin-bottom: 24px;
-      }
-      .combined-container {
-        display: flex;
-        flex-direction: column;
-      }
-      .camera-feed {
-        position: relative;
-        width: 100%;
-      }
-      .camera-feed canvas.output4 {
-        width: 100%;
-        display: block;
-      }
-      .overlay {
-        position: absolute;
-        top: 10px;
-        left: 0;
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0 12px;
-        z-index: 10;
-      }
-      .overlay h1 {
-        margin: 0;
-        font-size: 24px;
-        font-weight: 800;
-        color: #27ff00;
-        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-      }
-      .settings-button {
-        background: none;
-        border: none;
-        cursor: pointer;
-        padding: 8px;
-        border-radius: 8px;
-        transition: background 0.2s;
-      }
-      .settings-button:hover {
-        background: rgba(39, 255, 0, 0.1);
-      }
-      .control-box {
-        padding: 16px;
-        background: #121212;
-        border-top: 2px solid #27ff00;
-      }
-      .control-box h2 {
-        margin: 0 0 16px;
-        font-size: 28px;
-        font-weight: 800;
-        color: #27ff00;
-        text-align: center;
-      }
-      .info-row {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 16px;
-      }
-      .info-row span,
-      .word-counter {
-        font-size: 16px;
-        font-weight: 800;
-        color: #ffffff;
-      }
-      .timer {
-        font-size: 14px;
-        color: #ffffff;
-      }
-      .waiting-text {
-        margin-bottom: 16px;
-        font-size: 18px;
-        text-align: center;
-        color: #ffffff;
-      }
-      .word-container {
-        background: #212121;
-        border-radius: 8px;
-        padding: 8px;
-        display: flex;
-        flex-wrap: wrap;
-        gap: 8px;
-        min-height: 100px;
-        margin-bottom: 16px;
-      }
-      .word-container .word {
-        font-size: 14px;
-        color: #555;
-        transition: color 0.3s;
-      }
-      .word-container .word.primary {
-        color: #ffffff;
-      }
-      #pre-test-controls,
-      #active-test-controls,
-      #post-test-controls {
-        text-align: center;
-        margin-top: 8px;
-      }
-      #start-button,
-      #restart-button,
-      #skip-current,
-      #view-current {
-        width: 100%;
-        padding: 12px;
-        margin: 4px 0;
-        border: none;
-        border-radius: 8px;
-        background: #27ff00;
-        color: #000;
-        font-weight: 800;
-        font-size: 16px;
-        cursor: pointer;
-        transition: background 0.2s;
-      }
-      #start-button:hover,
-      #restart-button:hover,
-      #skip-current:hover,
-      #view-current:hover {
-        background: #1dd800;
-      }
-      #active-test-controls,
-      #post-test-controls {
-        display: none;
-      }
-      #current-sign {
-        text-align: center;
-      }
-      #result-modal,
-      #instruction-modal,
-      #settings-modal {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.85);
-        display: none;
-        justify-content: center;
-        align-items: center;
-        z-index: 1000;
-      }
-      .modal-content {
-        background: #1e1e1e;
-        border-radius: 16px;
-        padding: 24px;
-        text-align: center;
-        width: 80%;
-        max-width: 320px;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
-        animation: fadeIn 0.4s ease-out;
-      }
-      .modal-content h2 {
-        margin-top: 0;
-        font-size: 26px;
-        color: #27ff00;
-        margin-bottom: 16px;
-      }
-      .modal-content p {
-        font-size: 16px;
-        color: #ffffff;
-        margin-bottom: 24px;
-      }
-      .modal-button {
-        width: 100%;
-        padding: 12px;
-        background: #27ff00;
-        border: none;
-        border-radius: 8px;
-        color: #000;
-        font-weight: 800;
-        font-size: 16px;
-        cursor: pointer;
-        transition: background 0.2s ease;
-        margin-top: 8px;
-      }
-      .modal-button:hover {
-        background: #1dd800;
-      }
-      .modal-input {
-        width: 100%;
-        padding: 10px;
-        margin: 8px 0;
-        border-radius: 8px;
-        border: none;
-        font-size: 16px;
-      }
+      /* Fade-in animation for a smooth entrance */
       @keyframes fadeIn {
         from {
           opacity: 0;
-          transform: scale(0.8);
+          transform: translateY(10px);
         }
         to {
           opacity: 1;
-          transform: scale(1);
+          transform: translateY(0);
         }
+      }
+      .fade-in {
+        animation: fadeIn 0.5s ease-in-out;
+      }
+      /* Main card with dark background */
+      .main-card {
+        background: #1e1e1e;
+        border-radius: 14px;
+        padding: 20px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
+        margin-bottom: 20px;
+        animation: fadeIn 0.5s ease-in-out;
+      }
+      /* Camera feed container */
+      .camera-feed {
+        position: relative;
+        width: 100%;
+        max-width: 440px;
+        background: #2c2c2c;
+        border-radius: 14px;
+        overflow: hidden;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
+        margin: 0 auto;
+        animation: fadeIn 0.5s ease-in-out;
+      }
+      .output4 {
+        width: 100% !important;
+        max-width: 440px;
+        display: block;
+        margin: 0 auto;
+      }
+      /* Text elements with bright green accents */
+      .word-display {
+        font-size: 1.8em;
+        color: #27ff00;
+        text-align: center;
+        margin-bottom: 20px;
+      }
+      .word-display-sign {
+        font-size: 2.8em;
+        color: #27ff00;
+        text-align: center;
+        margin-bottom: 20px;
+      }
+      .current-word {
+        font-size: 16px;
+        text-align: center;
+        margin-top: 10px;
+        color: #bdbdbd;
+      }
+      /* Progress bar */
+      .progress-container {
+        width: 100%;
+        height: 18px;
+        background-color: #424242;
+        border-radius: 9px;
+        overflow: hidden;
+        margin-bottom: 20px;
+        animation: fadeIn 0.5s ease-in-out;
+      }
+      .progress-bar {
+        width: 0%;
+        height: 100%;
+        background-color: #27ff00;
+        border-radius: 9px;
+        transition: width 0.3s ease-in-out;
+      }
+      /* Header */
+      .header-row {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        margin-bottom: 20px;
+        animation: fadeIn 0.5s ease-in-out;
+      }
+      .alphabet-title {
+        font-size: 22px;
+        font-weight: 800;
+        color: #27ff00;
+      }
+      .word-counter {
+        font-size: 16px;
+        color: #27ff00;
+      }
+      /* Word status */
+      .word-status {
+        background-color: #1e1e1e;
+        padding: 14px;
+        border-radius: 12px;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.6);
+        margin-top: 20px;
+        text-align: center;
+        width: 100%;
+        animation: fadeIn 0.5s ease-in-out;
+      }
+      .current-word-label {
+        font-size: 16px;
+        font-weight: 700;
+        color: #27ff00;
+        margin-bottom: 6px;
+      }
+      .waiting-text {
+        font-size: 14px;
+        color: #bdbdbd;
+      }
+      .button-row {
+        display: flex;
+        justify-content: space-between;
+        gap: 12px;
+        width: 100%;
+        margin-top: 20px;
+        animation: fadeIn 0.5s ease-in-out;
+      }
+
+      .action-button {
+        flex: 1;
+        background: linear-gradient(145deg, #27ff00, #00e600);
+        border: none;
+        border-radius: 14px;
+        padding: 14px;
+        height: 70px;
+        font-size: 22px;
+        font-weight: 800;
+        color: #ffffff;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        transition: transform 0.2s ease, box-shadow 0.2s ease;
+      }
+
+      .action-button:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
+      }
+
+      .action-button:active {
+        transform: translateY(0);
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+      }
+
+      #restart-button {
+        background: linear-gradient(145deg, #ff5252, #ff1744);
+        color: #ffffff;
+      }
+
+      #skip-button {
+        background: linear-gradient(145deg, #ffc107, #ffab00);
+        color: #ffff;
       }
     </style>
   </head>
   <body>
-    <div class="mobile-container">
-      <div class="material combined-container">
-        <div class="camera-feed">
-          <canvas class="output4" width="480" height="480"></canvas>
-          <div class="overlay">
-            <h1>Playground</h1>
-            <button class="settings-button" onclick="openSettings()">
-              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M19.14 12.936c.036-.304.06-.612.06-.936 0-.324-.024-.632-.07-.936l2.034-1.59a.483.483 0 0 0 .12-.624l-1.92-3.312a.48.48 0 0 0-.576-.216l-2.394.96a7.02 7.02 0 0 0-1.62-.936l-.36-2.52A.48.48 0 0 0 14.88 3h-3.84a.48.48 0 0 0-.48.42l-.36 2.52a7.007 7.007 0 0 0-1.62.936l-2.394-.96a.48.48 0 0 0-.576.216l-1.92 3.312a.48.48 0 0 0 .12.624l2.034 1.59c-.046.304-.07.612-.07.936 0 .324.024.632.07.936l-2.034 1.59a.483.483 0 0 0-.12.624l1.92 3.312c.144.252.456.348.72.216l2.394-.96c.504.384 1.05.696 1.62.936l.36 2.52c.06.264.264.42.48.42h3.84c.216 0 .42-.156.48-.42l.36-2.52c.57-.24 1.116-.552 1.62-.936l2.394.96c.264.132.576.036.72-.216l1.92-3.312a.48.48 0 0 0-.12-.624l-2.034-1.59ZM12 15.6A3.6 3.6 0 1 1 12 8.4a3.6 3.6 0 0 1 0 7.2Z" fill="#27ff00"/>
-              </svg>
-            </button>
-          </div>
-        </div>
-        <div class="control-box">
-          <h2 id="current-sign">Waiting</h2>
-          <div class="info-row">
-            <div id="word-counter" class="word-counter">0/0</div>
-            <span class="timer" id="timer">00:00</span>
-          </div>
-          <div class="waiting-text"></div>
-          <div class="word-container" id="word-container"></div>
-          <div id="pre-test-controls">
-            <button id="start-button">Start</button>
-          </div>
-          <div id="active-test-controls">
-            <button id="skip-current">Skip</button>
-            <button id="view-current">View Sign</button>
-          </div>
-          <div id="post-test-controls">
-            <button id="restart-button">Restart</button>
-          </div>
-        </div>
+    <div class="header-row">
+      <div class="alphabet-title" id="lesson-title">The Alphabet</div>
+      <div id="word-counter" class="word-counter">0/{{totalWords}}</div>
+    </div>
+    <div class="progress-container">
+      <div class="progress-bar"></div>
+    </div>
+    <div class="main-card">
+      <div class="word-display">Sign this word</div>
+      <div class="word-display-sign" id="current-sign">{{lessonWord}}</div>
+      <div class="camera-feed">
+        <canvas class="output4" width="440" height="440"></canvas>
+        <div style="visibility: hidden" class="control4"></div>
+      </div>
+      <div class="word-status">
+        <div class="current-word-label">Current Word:</div>
+        <div class="waiting-text" id="current-gesture">Loading...</div>
       </div>
     </div>
-    <div id="result-modal">
-      <div class="modal-content">
-        <h2>Congratulations!</h2>
-        <p id="result-stats">You signed 0 words | SPM: 0</p>
-        <button id="modal-restart" class="modal-button">Restart</button>
-      </div>
+    <div class="button-row">
+      <button class="action-button" id="show-sign-button">Show Sign</button>
+      <button class="action-button" id="skip-button">Skip</button>
+      <button class="action-button" id="restart-button" style="display: none">
+        Restart
+      </button>
     </div>
-    <div id="instruction-modal">
-      <div class="modal-content">
-        <h2>How to Sign</h2>
-        <img id="instruction-gif" src="" alt="Sign Instruction" />
-        <p id="instruction-text">Watch the GIF to learn how to sign.</p>
-        <button id="instruction-close" class="modal-button">Close</button>
-      </div>
-    </div>
-    <div id="settings-modal">
-      <div class="modal-content">
-        <h2>Settings</h2>
-        <p>Set timer duration (seconds):</p>
-        <input id="timer-input" class="modal-input" type="number" min="10" value="60" />
-        <button id="settings-save" class="modal-button" onclick="saveSettings()">Save</button>
-        <button id="settings-close" class="modal-button" onclick="closeSettings()">Close</button>
-      </div>
-    </div>
-    <script>
-      function openSettings() {
-        document.getElementById("settings-modal").style.display = "flex";
-      }
-      function closeSettings() {
-        document.getElementById("settings-modal").style.display = "none";
-      }
-      function saveSettings() {
-        const newTime = parseInt(document.getElementById("timer-input").value);
-        if (!isNaN(newTime) && newTime > 0) {
-          countdownTime = newTime;
-          closeSettings();
-        }
-      }
-      function refreshPage() {
-        location.reload();
-      }
-    </script>
     <script src="playground.js"></script>
   </body>
 </html>
